# kalshi-trading

./: .env.example  .gitignore  README.md  pyproject.toml
config/: markets.yaml
config/strategies/: cfb_garbage_time.yaml  cfb_leading_late.yaml  nba_blowout.yaml  nba_close_late.yaml  nfl_blowout.yaml  nfl_spread.yaml
data/: trading.db
specs/: config_schema.md  espn_api.md  kalshi_api.md  trading_strategies.md
src/kalshi_trading/: __init__.py  cli.py
src/kalshi_trading/clients/: __init__.py  espn.py  kalshi.py  models.py
src/kalshi_trading/config/: __init__.py  loader.py
src/kalshi_trading/dashboard/: __init__.py  server.py
src/kalshi_trading/dashboard/templates/: dashboard.html
src/kalshi_trading/engine/: __init__.py  backtester.py  collector.py  risk.py  runner.py
src/kalshi_trading/monitoring/: __init__.py  database.py  logger.py
src/kalshi_trading/strategies/: __init__.py  base.py  scoreboard.py
tests/: conftest.py
tests/integration/: test_live_connection.py
tests/unit/: test_backtester.py  test_database.py  test_espn_client.py  test_kalshi_client.py  test_monitoring.py  test_risk.py  test_strategies.py
